# rust-ray-tracing

./: Cargo.toml
src/: lib.rs  main.rs
src/environment/: camera.rs  light.rs  mod.rs  scene.rs
src/renderer/: mod.rs  ray_shader.wgsl
src/shapes/: circle.rs  mod.rs  sphere.rs
src/util/: color.rs  material.rs  matrix.rs  mod.rs  ray.rs
src/util/vec/: mod.rs  vec2.rs  vec3.rs  vec4.rs
