[package]
name = "ray-tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
num-traits = "0.2.18"
winit = "0.29.15"
wgpu = "0.19.3"
env_logger = "0.11.3"
pollster = "0.3.0"
bytemuck = { version = "1.15.0", features = ["derive"] }